modules/wycs/tests/valid/test_arith_23.wyal
assert:
   forall (int x,int y,int z):
     if:
        x == y + z
        y >= 0
        z >= 0
     then:
        x >= y
        x >= z

