modules/wycs/tests/invalid/test_011.wyal
assert: 
  forall(int x, int y):
    x != y ==> (x + y == 2 * x)
